# WolknerProtocol

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: toolchain-mingw-w64.cmake
resources/: fonts.qrc  wolknerprotocol.rc
src/: MainWindow.cpp  MainWindow.h  ProcessMem.cpp  ProcessMem.h  Scanner.cpp  Scanner.h  main.cpp  test_cli.cpp
